# sudachi_tantivy

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: lib.rs
tests/: tantivy_test.rs
